tests/cases/parser/types/malformed_function_type.stderr
error: unexpectedly encountered a `>`
 --> $DIR/malformed_function_type.hash:3:20
2 |   
3 |   str_eq: (str, str) > str;
  |                      ^ here
  = help: consider adding a `;`
